NLP TP's/texts/robotics/robotics.stackexchange_0000031575.txt
Q:

PointCloud issues with Intel Compiler

Hi all,
I'm having trouble compiling my ROS code with the Intel compiler, whereas it compiled fine before with gcc. These are the errors:
/opt/ros/diamondback/stacks/perception_pcl/pcl/include/pcl/point_cloud.h(195): error: argument list for class template "pcl::PointCloud" is missing
friend boost::shared_ptr& detail::getMapping(PointCloud& p);
and
/opt/ros/diamondback/stacks/perception_pcl/pcl/include/pcl/point_cloud.h(195): error: declaration is incompatible with function template "boost::shared_ptrpcl::MsgFieldMap &pcl::detail::getMapping(pcl::PointCloud &)" (declared at line 204)
friend boost::shared_ptr& detail::getMapping(PointCloud& p);
^
detected during instantiation of class "pcl::PointCloud [with PointT=rgbd::pt]" at line 64 of "/home/rheld/Documents/Code/kinect/rgbd/branches/pcl/rgbd-ros-pkg/kinect_tracker/include/Model.h"
I believe these are the lines of code in question from Model.h:
typedef rgbd::pt PointT;
void loadTextCloud(char* fname, pcl::PointCloud &cloud);
struct AlignData
{
pcl::PointCloud curr_cloud;  (THIS IS LINE 64)
pcl::PointCloud cloud;
vector err_vector;
int num_outliers;
Eigen::Transform3f xform;
Eigen::Transform3f temp_pose;
};
Any help would be appreciated!

Originally posted by Robin on ROS Answers with karma: 87 on 2011-05-12
Post score: 0

Original comments
Comment by Robin on 2011-05-12:
No, I don't even have PCL compiled with ICC. I'm only compiling my new ROS package with ICC right now. I'm having troubles recompiling all the ROS packages in ICC and was hoping it wouldn't be necessary.
Comment by Eric Perko on 2011-05-12:
Is PCL using any features that are specific to GCC that ICC doesn't have? Are all of the dependencies of PCL compiled with ICC (I have no idea if you can have dependencies of something you are compiling with ICC compiled by whatever version of GCC you normally use on your machine)?

A:

This has been further discussed on the pcl mailing list

Originally posted by tfoote with karma: 58457 on 2011-05-17
This answer was ACCEPTED on the original site
Post score: 0

